--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "illuminate/support": "^9.0.0 || ^10.0.0",
         "rinvex/laravel-support": "^7.0.0",
         "spatie/eloquent-sortable": "^4.0.0",
-        "spatie/laravel-sluggable": "^3.0"
+        "spatie/laravel-sluggable": "^3.0",
+        "spatie/laravel-translatable": "^6.0.0"
     },
     "require-dev": {
         "codedungeon/phpunit-result-printer": "^0.31.0",
